# platform.core.telephony.tel-plugin-database

./: CMakeLists.txt  README  tel-plugin-database.manifest
debian/: changelog  control  rules
packaging/: tel-plugin-database.spec
res/: Published TS.25 Database 9 March 2015.xls  cdma_mcc_sid_list.sql  common_mcc_mnc_oper_list.sql
src/: database_main.c
